# skin_and_chrome

./: Cargo.toml  README.md  design.norg  script.norg  timelog.norg
assets/: robo2blood.pxo
assets/img/: org1.pxo  org2.pxo  robo1.pxo
src/: assets.rs  gamestate.rs  main.rs
src/encounter/: mod.rs  ui.rs
src/overworld/: mod.rs
src/rpg/: mod.rs  stats.rs
