[package]
name = "flesh_and_chrome"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_egui = "0.22"
bevy-inspector-egui = "0.20"
bevy_embedded_assets = "0.8"
serde = "1.0"
strum = "0.25"
strum_macros = "0.25"
bevy_prototype_lyon = {version = "0.9"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3
